refactored and adjusted user and role management
manager now has a role management api, adjusted user management api
