# src/modules/manager/user_management/controllers/user_managementV1.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Body, Post, Get, Put, Req, ParseUUIDPipe, Param } from '@nestjs/common';
+import { Controller, Body, Post, Get, Put, Req} from '@nestjs/common';
 import { UserManagementService } from '../user_management.service';
 import {
   ApiBody,
@@ -16,7 +16,6 @@ import {
 import { DeactivateUserAccountDto, ReactivateUserAccountDto, } from '../dto/user-account-status.dto';
 import { CreateUserWithRoleDto } from '../dto/create-user-with-role-permission.dto';
 import { UserEmailResetTokenDto } from '../dto/user-email.reset-token.dto';
-import { AddUserRolePermissionsDto } from '../dto/add-user-role-permissions.dto';
 
 import {
   ACTION_READ,
@@ -49,15 +48,15 @@ export class UserManagementControllerV1 {
     return this.userManagementService.viewUserAccount(user);
   }
 
-  @Get('users/me/permissions')
-  @ApiOperation({ summary: 'My User Account' })
-  @ApiGetResponse('My user account')
-  @ApiSecurityClearance(SEC_LVL_5)
-  @SecurityClearance(SEC_LVL_5)
-  @Can({ action: ACTION_READ, subject: USER_ACCOUNT })
-  getMyPermissions(@SessionUser() user: RequestUser) {
-    return this.userManagementService.getUserPermissions(user.id);
-  }
+  // @Get('users/me/permissions')
+  // @ApiOperation({ summary: 'My User Account' })
+  // @ApiGetResponse('My user account')
+  // @ApiSecurityClearance(SEC_LVL_5)
+  // @SecurityClearance(SEC_LVL_5)
+  // @Can({ action: ACTION_READ, subject: USER_ACCOUNT })
+  // getMyPermissions(@SessionUser() user: RequestUser) {
+  //   return this.userManagementService.getUserPermissions(user.id);
+  // }
 
   //create user account
   @Post()
@@ -104,37 +103,37 @@ export class UserManagementControllerV1 {
     );
   }
 
-  @Put('add-role/:userId/:roleName')
-  @ApiOperation({ summary: 'Add Role to user' })
-  @ApiPostResponse('Role has been added to the user with permission')
-  @ApiSecurityClearance(SEC_LVL_5)
-  @SecurityClearance(SEC_LVL_5)
-  @Can({ action: ACTION_CREATE, subject: USER_ACCOUNT })
-  addUserRole(
-    @SessionUser() requestUser: RequestUser,
-    @Param('userId', new ParseUUIDPipe()) userId: string,
-    @Param('roleName') roleName: string,
-  ) {
-    return this.userManagementService.addRoleUser(requestUser, userId, roleName);
-  }
+  // @Put('add-role/:userId/:roleName')
+  // @ApiOperation({ summary: 'Add Role to user' })
+  // @ApiPostResponse('Role has been added to the user with permission')
+  // @ApiSecurityClearance(SEC_LVL_5)
+  // @SecurityClearance(SEC_LVL_5)
+  // @Can({ action: ACTION_CREATE, subject: USER_ACCOUNT })
+  // addUserRole(
+  //   @SessionUser() requestUser: RequestUser,
+  //   @Param('userId', new ParseUUIDPipe()) userId: string,
+  //   @Param('roleName') roleName: string,
+  // ) {
+  //   return this.userManagementService.addRoleUser(requestUser, userId, roleName);
+  // }
 
-  //ADDING ROLE PERMISSION TO USER AFTER USER ACCOUNT CREATION
-  @Post('role_permission')
-  @ApiOperation({ summary: 'Add Role permissions to user' })
-  @ApiPostResponse('Role permission added to user successfully')
-  @ApiSecurityClearance(SEC_LVL_5)
-  @SecurityClearance(SEC_LVL_5)
-  @Can({ action: ACTION_CREATE, subject: USER_ACCOUNT })
-  addRolePermission(
-    @Body() addUserRolePermissionsDto: AddUserRolePermissionsDto,
-    @SessionUser() user: RequestUser,
-  ) {
-    return this.userManagementService.addUserRolePermissions(
-      addUserRolePermissionsDto.userId,
-      addUserRolePermissionsDto.rolePermissionIds,
-      user,
-    );
-  }
+  // //ADDING ROLE PERMISSION TO USER AFTER USER ACCOUNT CREATION
+  // @Post('role_permission')
+  // @ApiOperation({ summary: 'Add Role permissions to user' })
+  // @ApiPostResponse('Role permission added to user successfully')
+  // @ApiSecurityClearance(SEC_LVL_5)
+  // @SecurityClearance(SEC_LVL_5)
+  // @Can({ action: ACTION_CREATE, subject: USER_ACCOUNT })
+  // addRolePermission(
+  //   @Body() addUserRolePermissionsDto: AddUserRolePermissionsDto,
+  //   @SessionUser() user: RequestUser,
+  // ) {
+  //   return this.userManagementService.addUserRolePermissions(
+  //     addUserRolePermissionsDto.userId,
+  //     addUserRolePermissionsDto.rolePermissionIds,
+  //     user,
+  //   );
+  // }
 
   //first login password reset token
   // view user tokens
